added exception on isort (--skip __init__.py) for tox reformat

--- a/tox.ini
+++ b/tox.ini
@@ -48,7 +48,7 @@ deps =
     black
     isort
 commands =
-    isort --project iquaflow --section-default THIRDPARTY iquaflow tests
+    isort --project iquaflow --section-default THIRDPARTY iquaflow tests --skip __init__.py
     black iquaflow tests
 
 [testenv:docs]
