--- a/tox.ini
+++ b/tox.ini
@@ -38,7 +38,7 @@ deps =
     pep517
 commands =
     flake8 iquaflow tests
-    isort --check-only --diff --project iquaflow --section-default THIRDPARTY iquaflow tests
+    isort --check-only --diff --project iquaflow --section-default THIRDPARTY iquaflow tests --skip __init__.py
     black --check iquaflow tests
     python -m pep517.check .
 
