--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ install_requires =
     torch>=1.7.1
     torchvision>=0.8.1
     rasterio>=1.2.10
+    geojson>=2.5.0
 
 [options.extras_require]
 dev =
