--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ install_requires =
     mlflow>=1.0
     GpyOpt>=1.2.5
     geopandas>=0.8.1
+    geojson
     mlflow>=1.0
     pycocotools>=2.0.2
     opencv-python==4.4.0.44
