updated geojson setup to 2.5.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,6 @@ install_requires =
     mlflow>=1.0
     GpyOpt>=1.2.5
     geopandas>=0.8.1
-    geojson
     mlflow>=1.0
     pycocotools>=2.0.2
     opencv-python==4.4.0.44
@@ -33,6 +32,7 @@ install_requires =
     torch>=1.7.1
     torchvision>=0.8.1
     rasterio>=1.2.10
+    geojson>=2.5.0
 
 [options.extras_require]
 dev =
