fixed tox py36 errors for sharpness_metric.py, +added geojson in mypy missing imports

--- a/mypy.ini
+++ b/mypy.ini
@@ -91,3 +91,6 @@ ignore_missing_imports = True
 
 [mypy-skimage.*]
 ignore_missing_imports = True
+
+[mypy-geojson.*]
+ignore_missing_imports = True
