added multihead scripts and cfgs, updated cfgs_example cfgs and added shell scripts

--- a/iquaflow/quality_metrics/cfgs_example/config_rer_32x32.cfg
+++ b/iquaflow/quality_metrics/cfgs_example/config_rer_32x32.cfg
@@ -3,18 +3,18 @@ trainid=rer
 resume=False
 
 [PATHS]
-trainds=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short
-traindsinput=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short/train/images_short
-valds=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short
-valdsinput=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short/test/images_short
-outputpath =/tmp
+trainds=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset
+traindsinput=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset/train/images
+valds=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset
+valdsinput=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset/test/images
+outputpath=tmp-short
 
 [HYPERPARAMS]
 num_regs=[9]
 modifier_params={"rer": np.around(np.linspace(0.15, 0.55, 9),2), "dataset": "inria-aid"}
 epochs=200
 num_crops=20
-splits=[0.80,0.20]
+splits=[0.0556,0.0556]
 input_size=[32,32]
 batch_size=256
 lr=1e-3
