--- a/iquaflow/quality_metrics/cfgs_example/config_snr_32x32.cfg
+++ b/iquaflow/quality_metrics/cfgs_example/config_snr_32x32.cfg
@@ -7,14 +7,14 @@ trainds=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short
 traindsinput=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short/train/images_short
 valds=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short
 valdsinput=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short/test/images_short
-outputpath =/tmp
+outputpath=tmp-example
 
 [HYPERPARAMS]
 num_regs=[9]
 modifier_params={"snr": np.linspace(15, 55, 9, dtype=int), "dataset": "inria-aid"}
 epochs=200
 num_crops=200
-splits=[1.0,1.0]
+splits=[0.0556,0.0556]
 input_size=[32,32]
 batch_size=128
 lr=1e-3
