--- a/iquaflow/quality_metrics/cfgs_multihead/config_blur+rer512.cfg
+++ b/iquaflow/quality_metrics/cfgs_multihead/config_blur+rer512.cfg
@@ -1,5 +1,5 @@
 [RUN]
-trainid=snr
+trainid=blur+rer512
 resume=False
 
 [PATHS]
@@ -7,18 +7,19 @@ trainds=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/Aerial
 traindsinput=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset/train/images
 valds=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset
 valdsinput=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset/test/images
-outputpath=tmp-short
+outputpath=tmp-mh
 
 [HYPERPARAMS]
-num_regs=[9]
-modifier_params={"snr": np.linspace(15, 55, 9, dtype=int), "dataset": "inria-aid"}
+num_regs=[50,40]
+modifier_params={"sigma": np.linspace(1.0, 2.5, 50), "rer": np.around(np.linspace(0.15, 0.55, 40),2)}
 epochs=200
 num_crops=20
-splits=[0.0556,0.0556]
-input_size=[512,512]
-batch_size=32
-lr=1e-3
+splits=[0.445, 0.112]
+input_size=[512, 512]
+batch_size=16
+lr=0.01
 momentum=0.9
-weight_decay=1e-5
+weight_decay=0.0001
+soft_threshold=0.3
 workers=8
 data_shuffle=True
