--- a/iquaflow/quality_metrics/cfgs_example/config_gaussian+scale.cfg
+++ b/iquaflow/quality_metrics/cfgs_example/config_gaussian+scale.cfg
@@ -3,18 +3,18 @@ trainid=gaussian+scale
 resume=False
 
 [PATHS]
-trainds=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short
-traindsinput=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short/train/images_short
-valds=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short
-valdsinput=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short/test/images_short
-outputpath =/tmp
+trainds=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset
+traindsinput=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset/train/images
+valds=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset
+valdsinput=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset/test/images
+outputpath=tmp-short
 
 [HYPERPARAMS]
 num_regs=[5,5]
 modifier_params={"sigma": np.linspace(1.0, 2.5, 5), "scales": np.linspace(1.0, 2.0, 5)}
 epochs=200
 num_crops=32
-splits=[1,1]
+splits=[0.0556,0.0556]
 input_size=[32,32]
 batch_size=256
 lr=0.0002
