--- a/iquaflow/quality_metrics/cfgs_example/config_sharpness.cfg
+++ b/iquaflow/quality_metrics/cfgs_example/config_sharpness.cfg
@@ -3,18 +3,18 @@ trainid=sharpness
 resume=False
 
 [PATHS]
-trainds=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short
-traindsinput=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short/train/images_short
-valds=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short
-valdsinput=/home/david.berga/iquaflow/tests/test_datasets/inria-aid_short/test/images_short
-outputpath =/tmp
+trainds=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset
+traindsinput=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset/train/images
+valds=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset
+valdsinput=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset/test/images
+outputpath=tmp-short
 
 [HYPERPARAMS]
 num_regs=[5]
 modifier_params={"sharpness": np.linspace(1.0, 10, 5)}
 epochs=200
 num_crops=5
-splits=[0.85,0.15]
+splits=[0.0556,0.0556]
 input_size=[1024,1024]
 batch_size=16
 lr=2e-4
