--- a/iquaflow/quality_metrics/cfgs_gsd/newtest_AerialImageDataset_batchsize16_lr0.01_weightdecay1e-05_numregs10_scale_epochs200_numcrops10_splits0.445-0.112_inputsize1024-1024_momentum0.9_softthreshold0.3.cfg
+++ b/iquaflow/quality_metrics/cfgs_gsd/newtest_AerialImageDataset_batchsize16_lr0.01_weightdecay1e-05_numregs10_scale_epochs200_numcrops10_splits0.445-0.112_inputsize1024-1024_momentum0.9_softthreshold0.3.cfg
@@ -1,24 +1,23 @@
 [RUN]
-trainid=snr
+trainid=newtest_AerialImageDataset_batchsize16_lr0.01_weightdecay1e-05_numregs10_scale_epochs200_numcrops10_splits0.445-0.112_inputsize1024-1024_momentum0.9_softthreshold0.3
 resume=False
-
 [PATHS]
 trainds=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset
 traindsinput=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset/train/images
 valds=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset
 valdsinput=/home/Imatge/projects/satellogic/iq_tool_box-/tests/test_datasets/AerialImageDataset/test/images
-outputpath=tmp-short
-
+outputpath=tmp-gsd
 [HYPERPARAMS]
-num_regs=[9]
-modifier_params={"snr": np.linspace(15, 55, 9, dtype=int), "dataset": "inria-aid"}
+num_regs=[10]
+modifier_params={"scale": np.linspace(1.0, 0.5, 10), "resol": 0.6}
 epochs=200
-num_crops=200
-splits=[0.0556,0.0556]
-input_size=[32,32]
-batch_size=128
-lr=1e-3
+num_crops=10
+splits=[0.445, 0.112]
+input_size=[1024, 1024]
+batch_size=16
+lr=0.01
 momentum=0.9
-weight_decay=1e-5
+weight_decay=1e-05
+soft_threshold=0.3
 workers=8
 data_shuffle=True
